[gd_scene load_steps=2 format=3 uid="uid://dfsa2vfghkuqc"]

[ext_resource type="Script" path="res://ui/summon_visual.gd" id="1_hfr8p"]

[node name="SummonVisual" type="Control"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hfr8p")

[node name="CardArtTextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
stretch_mode = 5

[node name="StatsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="PowerLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "P: 0"

[node name="HPLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0/0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
